doc/0.2/_sources/tutorial_server_variable.rst.txt
Adding Variables to a Server
----------------------------

This tutorial shows how to work with data types and how to add variable nodes
to a server. First, we add a new variable to the server. Take a look at the
definition of the ``UA_VariableAttrbitues`` structure to see the list of all
attributes defined for VariableNodes.

.. code-block:: c

   
   #include <signal.h>
   #include <stdio.h>
   #include "open62541.h"
   
   static void
   addVariable(UA_Server *server) {
       /* Define the attribute of the myInteger variable node */
       UA_VariableAttributes attr;
       UA_VariableAttributes_init(&attr);
       UA_Int32 myInteger = 42;
       UA_Variant_setScalar(&attr.value, &myInteger, &UA_TYPES[UA_TYPES_INT32]);
       attr.description = UA_LOCALIZEDTEXT("en_US","the answer");
       attr.displayName = UA_LOCALIZEDTEXT("en_US","the answer");
       attr.dataType = UA_TYPES[UA_TYPES_INT32].typeId;
   
       /* Add the variable node to the information model */
       UA_NodeId myIntegerNodeId = UA_NODEID_STRING(1, "the.answer");
       UA_QualifiedName myIntegerName = UA_QUALIFIEDNAME(1, "the answer");
       UA_NodeId parentNodeId = UA_NODEID_NUMERIC(0, UA_NS0ID_OBJECTSFOLDER);
       UA_NodeId parentReferenceNodeId = UA_NODEID_NUMERIC(0, UA_NS0ID_ORGANIZES);
       UA_Server_addVariableNode(server, myIntegerNodeId, parentNodeId,
                                 parentReferenceNodeId, myIntegerName,
                                 UA_NODEID_NULL, attr, NULL, NULL);
   }
   
Now we change the value with the write service. This uses the same service
implementation that can also be reached over the network by an OPC UA client.

.. code-block:: c

   
   static void
   writeVariable(UA_Server *server) {
       UA_NodeId myIntegerNodeId = UA_NODEID_STRING(1, "the.answer");
   
       /* Write a different integer value */
       UA_Int32 myInteger = 43;
       UA_Variant myVar;
       UA_Variant_init(&myVar);
       UA_Variant_setScalar(&myVar, &myInteger, &UA_TYPES[UA_TYPES_INT32]);
       UA_Server_writeValue(server, myIntegerNodeId, myVar);
   
       /* Set the status code of the value to an error code. The function
        * UA_Server_write provides access to the raw service. The above
        * UA_Server_writeValue is syntactic sugar for writing a specific node
        * attribute with the write service. */
       UA_WriteValue wv;
       UA_WriteValue_init(&wv);
       wv.nodeId = myIntegerNodeId;
       wv.attributeId = UA_ATTRIBUTEID_VALUE;
       wv.value.status = UA_STATUSCODE_BADNOTCONNECTED;
       wv.value.hasStatus = true;
       UA_Server_write(server, &wv);
   
       /* Reset the variable to a good statuscode with a value */
       wv.value.hasStatus = false;
       wv.value.value = myVar;
       wv.value.hasValue = true;
       UA_Server_write(server, &wv);
   }
   
Note how we initially set the DataType attribute of the variable node to the
NodeId of the Int32 data type. This forbids writing values that are not an
Int32. The following code shows how this consistency check is performed for
every write.

.. code-block:: c

   
   static void
   writeWrongVariable(UA_Server *server) {
       UA_NodeId myIntegerNodeId = UA_NODEID_STRING(1, "the.answer");
   
       /* Write a string */
       UA_String myString = UA_STRING("test");
       UA_Variant myVar;
       UA_Variant_init(&myVar);
       UA_Variant_setScalar(&myVar, &myString, &UA_TYPES[UA_TYPES_STRING]);
       UA_StatusCode retval = UA_Server_writeValue(server, myIntegerNodeId, myVar);
       printf("Writing a string returned statuscode %s\n", UA_StatusCode_name(retval));
   }
   
It follows the main server code, making use of the above definitions.

.. code-block:: c

   
   UA_Boolean running = true;
   static void stopHandler(int sign) {
       UA_LOG_INFO(UA_Log_Stdout, UA_LOGCATEGORY_SERVER, "received ctrl-c");
       running = false;
   }
   
   int main(void) {
       signal(SIGINT, stopHandler);
       signal(SIGTERM, stopHandler);
   
       UA_ServerConfig config = UA_ServerConfig_standard;
       UA_ServerNetworkLayer nl =
           UA_ServerNetworkLayerTCP(UA_ConnectionConfig_standard, 16664);
       config.networkLayers = &nl;
       config.networkLayersSize = 1;
       UA_Server *server = UA_Server_new(config);
   
       addVariable(server);
       writeVariable(server);
       writeWrongVariable(server);
   
       UA_Server_run(server, &running);
       UA_Server_delete(server);
       nl.deleteMembers(&nl);
       return 0;
   }
